<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="struct_byte" Id="{0b56b183-c983-4d9f-96b5-cefacad6a1f0}">
    <Declaration><![CDATA[TYPE struct_byte :
STRUCT
	b1		:BYTE:=0;
	b2		:BYTE:=0;
	b3		:Byte:=0;
	b4		:Byte:=0;
	b5		:Byte:=0;
	b6		:Byte:=0;
	b7		:Byte:=0;
	b8		:Byte:=0;
	b9		:BYTE:=0;
	b10		:BYTE:=0;
	b11		:BYTE:=0;
	b12		:BYTE:=0;
	b13		:BYTE:=0;
	b14		:BYTE:=0;
	b15		:BYTE:=0;
	b16		:BYTE:=0;
	b17		:BYTE:=0;
	b18		:BYTE:=0;
	b19		:BYTE:=0;
	b20		:BYTE:=0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>